--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.demo2"
+        applicationId "com.gargprabhav.calculator2022"
         minSdk 21
         targetSdk 32
         versionCode 1
